// Copyright IBM Corp. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

option go_package = "github.com/IBM-Blockchain/bcdb-server/pkg/types";

package types;

import "block_and_transaction.proto";

message GetDBStatusQueryEnvelope {
  GetDBStatusQuery payload = 1;
  bytes signature = 2;
}

message GetDBStatusQuery {
  string userID = 1;
  string DBName = 2;
}

message GetDataQueryEnvelope {
  GetDataQuery payload = 1;
  bytes signature = 2;
}

message GetDataQuery {
  string userID = 1;
  string DBName = 2;
  string key = 3;
}

message GetUserQueryEnvelope {
  GetUserQuery payload = 1;
  bytes signature = 2;
}

message GetUserQuery {
  string userID = 1;
  string targetUserID = 2;
}

message GetConfigQueryEnvelope {
  GetConfigQuery payload = 1;
  bytes signature = 2;
}

message GetConfigQuery {
  string userID = 1;
}

message GetNodeConfigQueryEnvelope {
  GetNodeConfigQuery payload = 1;
  bytes signature = 2;
}

message GetNodeConfigQuery {
  string userID = 1;
  string nodeID = 2;
}

//========= Part II Provenance API queries

message GetBlockQuery {
  string userID = 1;
  uint64 block_number = 2;
}

message GetBlockQueryEnvelope {
  GetBlockQuery payload = 1;
  bytes signature = 2;
}

message GetLedgerPathQuery {
  string userID = 1;
  uint64 start_block_number = 2;
  uint64 end_block_number = 3;
}

message GetLedgerPathQueryEnvelope {
  GetLedgerPathQuery payload = 1;
  bytes signature = 2;
}

message GetTxProofQuery {
  string userID = 1;
  uint64 block_number = 2;
  uint64 tx_index = 3;
}

message GetTxProofQueryEnvelope {
  GetTxProofQuery payload = 1;
  bytes signature = 2;
}

message GetHistoricalDataQuery {
  string userID = 1;
  string DBName = 2;
  string key = 3;
  Version version = 4;
  string direction = 5;
  bool onlyDeletes = 6;
  bool mostRecent = 7;
}

message GetHistoricalDataQueryEnvelope {
  GetHistoricalDataQuery payload = 1;
  bytes signature = 2;
}

message GetDataReadersQuery {
  string userID = 1;
  string DBName = 2;
  string key = 3;
}

message GetDataReadersQueryEnvelope {
  GetDataReadersQuery payload = 1;
  bytes signature = 2;
}

message GetDataWritersQuery {
  string userID = 1;
  string DBName = 2;
  string key = 3;
}

message GetDataWritersQueryEnvelope {
  GetDataWritersQuery payload = 1;
  bytes signature = 2;
}

message GetDataReadByQuery {
  string userID = 1;
  string target_userID = 2;
}

message GetDataReadByQueryEnvelope {
  GetDataReadByQuery payload = 1;
  bytes signature = 2;
}

message GetDataWrittenByQuery {
  string userID = 1;
  string target_userID = 2;
}

message GetDataDeletedByQuery {
  string userID = 1;
  string target_userID = 2;
}

message GetDataDeletedByQueryEnvelope {
  GetDataDeletedByQuery payload = 1;
  bytes signature = 2;
}

message GetDataWrittenByQueryEnvelope {
  GetDataWrittenByQuery payload = 1;
  bytes signature = 2;
}

message GetTxIDsSubmittedByQuery {
  string userID = 1;
  string target_userID = 2;
}

message GetTxIDsSubmittedByQueryEnvelope {
  GetTxIDsSubmittedByQuery payload = 1;
  bytes signature = 2;
}

message GetTxReceiptQuery {
  string userID = 1;
  string txID = 2;
}

message GetTxReceiptQueryEnvelope {
  GetTxReceiptQuery payload = 1;
  bytes signature = 2;
}

message GetMostRecentUserOrNodeQuery {
    enum Type {
        USER = 0;
        NODE = 1;
    }
    Type type = 1;
    string userID = 2;
    string ID = 3;
    Version  version = 4;
}
